--- a/Desktop/FirstGame/css/style.css
+++ b/Desktop/FirstGame/css/style.css
@@ -22,7 +22,7 @@ a:visited {
     position: absolute;
     width: 70%;
     height: 60%;
-    background: url('../resource/3.png');
+    background: url('../resource/2.png');
     background-repeat: repeat;
     background-size: contain;
     overflow: hidden;
@@ -46,9 +46,9 @@ a:visited {
 #background div.cloud {
 
     width: 23%;
-    height: 28%;
+    height: 22%;
     position: absolute;
-    background-image: url('../resource/cloud1.gif');
+    background-image: url('../resource/plane4.png');
     background-repeat: no-repeat;
     background-size: contain;
     overflow: visible;
